reorganize file folders

--- a/election_leaflet/index.html
+++ b/election_leaflet/index.html
@@ -24,7 +24,7 @@
          <!-- API key -->
   <script type="text/javascript" src="js/config.js"></script>
   <!-- JS -->
-  <script type="text/javascript" src="logic.js"></script>
+  <script type="text/javascript" src="js/logic.js"></script>
         
   </body>
 
